result search overflow fix

--- a/style.css
+++ b/style.css
@@ -473,6 +473,7 @@ input[type=text]:focus:not(:invalid), input[type=number]:focus:not(:invalid){
   box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3);
   border-radius: 1em;
   overflow-y: scroll;
+  overflow-x: hidden;
   scroll-behavior: smooth;
   /* max-height: 50vh; */
 }
